syntax = "proto3";

package iota.rpc;
import "proto/messages.proto";
import "google/api/annotations.proto";

service HubGateway {
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {
    option (google.api.http) = {
      post: "/v1/createUser"
      body: "*"
    };
  
  }
}

