syntax = "proto3";

package hub.rpc;

enum ErrorCode {
  UNKNOWN                   = 0;
  USER_EXISTS               = 1;
  USER_DOES_NOT_EXIST       = 2;
  CANCELLATION_NOT_POSSIBLE = 3;
  INSUFFICIENT_BALANCE      = 4;
}
message Error {
  ErrorCode code = 1;
}

message CreateUserRequest {
  string userId = 1;
}

message CreateUserReply {}

message GetBalanceRequest {
  string userId = 1;
}

message GetBalanceReply {
  int64 available = 1;
  // TODO(th0br0): pendingSweep
}

message GetDepositAddressRequest {
  string userId = 1;
}

message GetDepositAddressReply {
  string address = 1;
}

message UserWithdrawRequest {
  string userId        = 1;
  string payoutAddress = 2;
  uint64 amount        = 3;
  string note          = 4;
}

message UserWithdrawReply {
  string uuid = 1;
}

message UserWithdrawCancelRequest {
  string uuid = 1;
}

message UserWithdrawCancelReply {
  bool success = 1;
}

message StatsRequest {}

message StatsReply {}

message GetUserHistoryRequest {}

message GetUserHistoryReply {}

message UserBalanceSubscriptionRequest {}

message UserBalanceEvent {}

message ScheduleSweepRequest {}

message ScheduleSweepReply {}

